fix body overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,4 +2,5 @@ html, body, #root {
     height: 100%;
     margin: 0;
     padding: 0;
+    overflow: auto;
   }
